--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <input type="button" value="Add" ng-click="addDropdown($index,detail)" />
                 <!-- create combobox for dropdown-->
                 <br/> Combobox:
-                <select ng-model="detail_drop" ng-options="idx as detail_drop.item for (idx,detail_drop) in field.dropdown_list"></select>
+                <select ng-model="detail_drop" ng-options="idx as detail_drop.item for (idx,detail_drop) in field.dropdown_list">
+                    <option value=""> -- select -- </option>
+                </select>
                 <!-- remove selected dropdown list -->
                 <button ng-click="removeDropdown($index,detail_drop)">remove</button>
                 <!-- remove dropdown field -->
@@ -46,9 +48,18 @@
             </div>
 
             <!-- TEXTBOX AND RADIOBUTTON AND CHECKBOX-->
-            <div ng-if="field.type=='text' || 'radio' || 'checkbox'">
-                <input type="{{field.type}}" />
-                <input type="text" />
+            <div ng-if="field.type== 'radio' || field.type=='checkbox'">
+                <input type="text" ng-model="detail" name="" placeholder="Enter text here" />
+                <!-- add radiobutton list -->
+                <input type="button" value="Add" ng-click="addDropdown($index,detail)" />
+                <!-- create radiobutton list -->
+                <br/><pre>{{detail}}</pre>
+                <label ng-repeat="info in field.dropdown_list">
+                    <input type="{{field.type}}" name="list" ng-model="detail_drop"/>{{info.item}} &nbsp;
+                </label>
+                <!-- remove selected radiobutton list (not done) -->
+                <button ng-click="removeDropdown($index,detail_drop)">remove</button>
+                <!-- remove radio field -->
                 <button class="remove" ng-click="removefield($index)">-</button>
             </div>
 
